[gd_scene load_steps=2 format=2]

[ext_resource path="res://Code/Editor.gd" type="Script" id=1]

[node name="Editor" type="Node2D"]
script = ExtResource( 1 )

[node name="questions" type="Node2D" parent="."]
position = Vector2( 75, 40 )

[node name="lables" type="Node2D" parent="."]

[node name="save" type="Button" parent="."]
margin_left = 961.0
margin_top = 534.0
margin_right = 1002.0
margin_bottom = 554.0
text = "Save"

[node name="load" type="Button" parent="."]
visible = false
margin_left = 962.0
margin_top = 497.0
margin_right = 1003.0
margin_bottom = 517.0
text = "Load"

[node name="quit" type="Button" parent="."]
margin_left = 962.0
margin_top = 564.0
margin_right = 1002.0
margin_bottom = 584.0
text = "Quit"

[node name="quit_confrim" type="ConfirmationDialog" parent="."]
margin_left = 374.0
margin_top = 262.0
margin_right = 662.0
margin_bottom = 332.0
dialog_text = "Do you really want to quit without saving??"

[node name="error_display" type="WindowDialog" parent="."]
visible = true
margin_left = 5.0
margin_top = 16.0
margin_right = 202.0
margin_bottom = 160.0
window_title = "SOMETHING AIN't RIGHT"

[node name="text" type="RichTextLabel" parent="error_display"]
margin_right = 196.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_anyway" type="Button" parent="error_display"]
anchor_top = 0.816
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 104.0
margin_top = 2.49599
margin_bottom = -4.0
text = "Save Anyway"

[node name="forgor" type="Button" parent="error_display"]
margin_left = -21.0
margin_top = 120.0
margin_right = 97.0
margin_bottom = 140.0
text = "Return to Editing"

[node name="save_dialouge" type="WindowDialog" parent="."]
margin_right = 182.0
margin_bottom = 144.0
window_title = "Save your Jeopardy"

[node name="TextEdit" type="TextEdit" parent="save_dialouge"]
margin_left = 3.0
margin_top = 52.0
margin_right = 181.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="save_dialouge"]
margin_left = 3.0
margin_top = 22.0
margin_right = 179.0
margin_bottom = 36.0
text = "Enter a name for your game"
align = 1

[node name="save_confirm" type="Button" parent="save_dialouge"]
margin_left = 30.0
margin_top = 115.0
margin_right = 162.0
margin_bottom = 135.0
text = "Yass"
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="confirmed" from="quit_confrim" to="." method="_on_quit_confrim_confirmed"]
[connection signal="pressed" from="error_display/save_anyway" to="." method="_on_save_anyway_pressed"]
[connection signal="pressed" from="error_display/forgor" to="." method="_on_forgor_pressed"]
[connection signal="pressed" from="save_dialouge/save_confirm" to="." method="_on_save_confirm_pressed"]
